# VirtAssis

./: .env  Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml  requirements.txt
VirtAssis/: asgi.py  settings.py  urls.py  wsgi.py
VirtAssis/users/: forms.py  urls.py  views.py
additional_app/: apps.py  exchange.py  scraping.py  urls.py  views.py  weather.py
additional_app/templates/additional_app/: index.html
additionalapp/: apps.py  scraping.py  urls.py  views.py  weather.py
contacts/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_email_field_type_alter_phonenumber_field_type.py  0002_application_alter_contact_options.py  0003_alter_datatype_data_type.py  0003_alter_email_field_type_alter_phonenumber_field_type.py  0004_alter_email_field_type_alter_phonenumber_field_type.py
contacts/templatetags/: custom_filters.py
filemanager/: models.py  urls.py  utils.py  views.py
filemanager/migrations/: 0001_initial.py  0002_file_upload_datetime.py
filemanager/templates/: base.html  file_list.html  menu.html  upload_file.html
noteapp/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
noteapp/migrations/: 0001_initial.py  0002_alter_tag_name_tag_unique_tag_per_user.py  0002_notetotag.py  0003_alter_tag_options_alter_note_importance.py  0004_alter_note_importance.py  0005_alter_note_importance.py  0006_alter_note_importance.py  0007_alter_note_importance.py
static/css/: style.css
users/: forms.py  urls.py  views.py
virtassis/: asgi.py  settings.py  urls.py  wsgi.py
(+36 files in other folders)
