[tool.poetry]
name = "hw_13_2"
version = "0.1.0"
description = "django"
authors = ["Ovcharenko_Roman"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pymongo = "^4.3.3"
psycopg2 = "^2.9.6"
cloudinary = "^1.33.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"